final comit second

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "home-page":"https://github.com/code1511/portfolio.git",
   "name": "myport",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "home-page":"https://github.com/code1511/portfolio.git"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
