--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home-page":"https://github.com/code1511/portfolio.git",
+  "home-page": "https://github.com/code1511/portfolio/",
   "name": "myport",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.0",
     "ityped": "^1.0.3",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
