--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home-page": "http://gitname.github.io/portfolio",
+  "home-page": "https://github.com/code1511/portfolio",
   "name": "myport",
   "version": "0.1.0",
   "private": true,
